Crea un nuevo juego desde el navigation Drawer, mostrando el recyclerView en pantalla, con los íconos de incógnita. Al tocar en un ícono se da vuelta para siempre. TODO: Implementar un timer mediante threads para hacer:      Imagen de splash      Muestra de imágenes al comienzo del juego      tiempo en que se muestra una imagen todada.  Marcar Coincidencias y dejar esas fichas dadas vuelta.  Crear archivo de base de datos y grabar resultados del juego.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-    <string name="app_name">MiMemoTest</string>
+    <string name="app_name" translatable="false">MiMemoTest</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="newGame">New Game</string>
+    <string name="difficulty">Difficulty</string>
 </resources>
